# rust_prime_sieve

./: Cargo.toml
src/: main.rs
